# ASIB

./: .gitignore  .pre-commit-config.yaml  ASIB_CODE_REVIEW.md  ASIB_METHOD_GUIDE.md  ASIB_OVERVIEW.md  CHANGELOG.md  CONFIGS_BEST_STRUCTURE_IMPLEMENTATION.md  CONFIGS_INDEX.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  environment.yml  eval.py  hydra_main.py  main.py  main_new.py  main_old.py  parse_logs_to_csv.py  pyproject.toml  pytest.ini  quick_check.py  requirements.txt  run.sh  run_finetune.sh  run_finetune_clean.sh  run_minimal.sh  setup.py  slurm-514131.out  slurm-514294.out  slurm-514296.out  trainer.py  trainer_continual.py
.github/workflows/: ci.yaml  test.yml  tests.yml
analysis/: compare_ablation.py  plot_results.py
configs/: base.yaml  control.yaml  default.yaml  fine_tune.yaml  hparams.yaml  hydra.yaml  minimal.yaml  partial_freeze.yaml  registry_key.yaml  registry_map.yaml  run_setup.yaml
configs/ablation/: kd_sweep.yaml  rnd_seed.yaml
configs/anchor/: fair_baseline.yaml
configs/cl/: pycil_defaults.yaml  split_cifar.yaml
configs/dataset/: cifar100.yaml  imagenet32.yaml
configs/experiment/: L0_baseline.yaml  L1_ib.yaml  (+21 more)
core/: __init__.py  builder.py  trainer.py  utils.py
data/: __init__.py  cifar100.py  cifar100_cl.py  cifar100_overlap.py  imagenet100.py  imagenet32.py  overlap.py  tinyimagenet.py
docs/: API.md  ASIB_CL_Implementation.md  ASIB_CL_Implementation_Detailed.md  CONFIGURATION.md  INSTALLATION.md  PyCIL_Integration_Guide.md  Test_Guide.md
examples/: run_cifar100_cl.sh  smoke_cifar.py
experiments/: exp_adaptgate.yaml  run_<method>_<scenario>.yaml  run_ewc_continual.yaml  run_method_scenario.yaml  run_vib_continual.yaml  run_vib_standard.yaml  sweep_<topic>.yaml  sweep_seed_study.yaml  sweep_topic.yaml  sweep_vib_standard.yaml
framework_docs/: ASIB_OVERVIEW.md
logs/: asmb_400529.err
methods/: __init__.py  ab.py  asib.py  asmb.py  at.py  continual_asmb.py  crd.py  dkd.py  ewc.py  feature_kd.py  fitnet.py  ft.py  lwf.py  reviewkd.py  simkd.py  sskd.py  vanilla_kd.py
models/: __init__.py  discriminator.py  ib_mbm.py  la_mbm.py  mbm.py  student_densenet_adapter.py  student_efficientnet_adapter.py  student_mobilenet_adapter.py  student_resnet_adapter.py  student_swin_adapter.py  student_vit_adapter.py  teacher_densenet.py  teacher_efficientnet.py  teacher_mobilenet.py  teacher_resnet.py  teacher_swin.py  teacher_vit.py  vib_head.py
modules/: __init__.py  cutmix_finetune_teacher.py  disagreement.py  ib_mbm.py  kd_loss.py  loss_safe.py  losses.py  partial_freeze.py  trainer_student.py  trainer_teacher.py  trainer_vib.py
results/: asib_noeval_20250801_032705.json  summary.csv
run/: ASIB_CL_README.md  README.md  README_finetune.md  run.sh  run_ablation_study.sh  run_asib_ablation_study.sh  run_asib_cl_experiment.py  run_asib_class_overlap.sh  run_asib_methods_sanity.sh  run_asib_sota_comparison.sh  run_finetune_all_teachers.sh  run_finetune_single.sh  run_overlap.sh  run_sensitivity.sh  run_test.sh  test_gpu_allocation.sh
scripts/: README.md  __init__.py  fine_tuning.py  finetune_teacher_ce.py  generate_config.py  hparams.sh  launch_experiments.py  launcher.py  load_hparams.py  make_snapshots.sh  run_experiments.sh  run_ibkd.sh  run_launcher.sh  run_many.sh  run_overlap_experiments.sh  run_single_teacher.py  run_sweep.py  run_sweep.sh  run_vib_overlap.sh  test_new_methods.py  train_student_baseline.py  train_teacher.py  train_teacher_overlap.py
students/: __init__.py  student_convnext.py
sweeps/: asmb_grid.yaml  asmb_mixed.yaml  overlap_grid.yaml
teachers/: __init__.py  teacher_efficientnet.py  teacher_resnet.py
tests/: README.md  conftest.py  run_all_tests.py  test_actual_dataset_problem.py  test_amp.py  test_argparse_adam_beta.py  test_asib_cl.py  test_asib_step.py  test_auto_set_mbm_query_dim.py  test_beta_schedule.py  test_build_from_teachers.py  test_certainty_weighting.py  test_check_label_range.py  test_cifar100_overlap.py  test_cl_experiments.py  test_compute_disagreement_rate.py  test_config_utils.py  test_configs.py  test_continual.py  test_convnext_s_teacher.py  test_core.py  test_core_utils.py  test_cutmix.py  test_cutmix_criterion_high_dim.py  test_cutmix_criterion_label_clamp.py  test_data.py  test_dataset_attributes.py  test_dataset_fix.py  test_disagreement.py  test_disagreement_weights.py  test_distillation_adapter_usage.py  test_distiller_label_smoothing.py  test_distillers.py  test_efficientnet_l2_checkpoint.py  test_error_prevention.py  test_eval_synergy.py  test_experiment_configs.py  test_experiment_execution.py  test_experiment_logger_finalize.py  test_feat_kd.py  (+60 more)
utils/: __init__.py  amp.py  cl_utils.py  config_utils.py  data.py  data_utils.py  dataloader.py  debug.py  distill_loss.py  ema.py  eval.py  exceptions.py  feature_hook.py  freeze.py  logger.py  logging_setup.py  logging_utils.py  make_cache.py  make_overlap_subsets.py  metrics.py  misc.py  model_factory.py  optimization.py  params.py  path_utils.py  print_cfg.py  progress.py  schedule.py  train.py  transform_utils.py  validation.py
(+236 files in other folders)
